# brinta

./: .gitignore  Dockerfile  Makefile  README.md  agg.json  docker-compose.yml  mapping.json  match-query.json  query.json  text-and-date.json
multi-value/: Makefile  SearchResultAdapter.py  SearchResultItem.py  index.py  mapping.json  pyproject.toml
