[tool.poetry]
name = "multi-value"
version = "0.1.0"
description = ""
authors = ["HDJ <hayco.de.jong@di.huc.knaw.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
annorepo-client = "^0.1.3"
elasticsearch = "^8.14.0"
jsonpickle = "^3.2.2"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
